--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AddMentor.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AddMentor.cshtml
@@ -15,47 +15,53 @@
     <div class="card">
         <div class="card-body">
             <form method="post">
+                <!-- SSN -->
+                <div class="form-group">
+                
+                    <label for="SSN" class="control-label">SSN</label>
+                    <input asp-for="@Model.mentor.SSN" type ="text" class="form-control" />
+                </div>
                 <!-- Name -->
                 <div class="form-group">
                     <label for="Name" class="control-label">Name</label>
-                    <input id="Name" name="Name" class="form-control" />
+                    <input type = "text" asp-for="@Model.mentor.Name" class="form-control" />
                 </div>
 
                 <!-- Email -->
                 <div class="form-group">
                     <label for="Email" class="control-label">Email</label>
-                    <input id="Email" name="Email" type="email" class="form-control" />
+                    <input asp-for="@Model.mentor.Email" type="email" class="form-control" />
                 </div>
-
+                <!-- Phone Number -->
+                <div class="form-group">
+                    <label for="PhoneNumber" class="control-label">Phone Number</label>
+                    <input asp-for="@Model.mentor.Phone" type="text" class="form-control" />
+                </div>
                 <!-- Password -->
                 <div class="form-group">
                     <label for="Password" class="control-label">Password</label>
-                    <input id="Password" name="Password" type="password" class="form-control" />
+                    <input asp-for="@Model.mentor.Password" type="password" class="form-control" />
                 </div>
 
-                <!-- Roles -->
+                <!-- Education -->
                 <div class="form-group">
-                    <label for="Roles" class="control-label">Roles</label>
-                    <input id="Roles" name="Roles" class="form-control" />
+                    <label for="Education" class="control-label">Education</label>
+                    <input asp-for="@Model.mentor.Education" class="form-control" />
                 </div>
 
                 <!-- Bio -->
                 <div class="form-group">
                     <label for="Bio" class="control-label">Bio</label>
-                    <textarea id="Bio" name="Bio" class="form-control"></textarea>
+                    <textarea asp-for="@Model.mentor.BIO" class="form-control"></textarea>
                 </div>
 
                 <!-- CV -->
                 <div class="form-group">
                     <label for="CV" class="control-label">CV</label>
-                    <input id="CV" name="CV" type="file" class="form-control" />
+                    <input asp-for="@Model.mentor.CV" type="file" class="form-control" />
                 </div>
 
-                <!-- Phone Number -->
-                <div class="form-group">
-                    <label for="PhoneNumber" class="control-label">Phone Number</label>
-                    <input id="PhoneNumber" name="PhoneNumber" type="tel" class="form-control" />
-                </div>
+              
 
                 <div class="form-group mt-3">
                     <button type="submit" class="btn btn-primary">Save Changes</button>
