--- a/IEEE_EMB/IEEE_EMB/Pages/Index.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Index.cshtml
@@ -153,21 +153,21 @@
                         <div class="news-item">
                             <h3>Latest Research Breakthrough</h3>
                             <p>New developments in bioinformatics research advancing computational biology and medicine...</p>
-                            <a href="#" class="btn btn-primary">Learn More</a>
+                            <a href="/Workshops" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="news-item">
                             <h3>Upcoming Workshop</h3>
                             <p>Join us for an exciting workshop on the latest advancements in computational biology...</p>
-                            <a href="#" class="btn btn-primary">Register Now</a>
+                            <a href="/Join" class="btn btn-primary">Register Now</a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="news-item">
                             <h3>Conference Announcement</h3>
                             <p>Annual IEEE BioInformatics conference bringing together leading researchers...</p>
-                            <a href="#" class="btn btn-primary">View Details</a>
+                            <a href="/Seminars" class="btn btn-primary">View Details</a>
                         </div>
                     </div>
                 </div>
