--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AllAdmins.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AllAdmins.cshtml
@@ -22,7 +22,7 @@
                         <th>Email</th>
                         <th>University</th>
                         <th>CV</th>
-                        <th>Actions</th>
+                       @*  <th>Actions</th> *@
 
                     </tr>
                 </thead>
@@ -34,7 +34,7 @@
                             <td><strong>@Model.adminsTable.Rows[i][1]</strong></td>
                             <td><strong>@Model.adminsTable.Rows[i][2]</strong></td>
                             <td><strong><a href="~/Documents/@Model.adminsTable.Rows[i][3]">CV</a></strong></td>
-                            <td>
+                            @* <td>
                                 <div class="dropdown">
                                     <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
                                         <i class="bx bx-dots-vertical-rounded"></i>
@@ -51,7 +51,7 @@
                                         </a>
                                     </div>
                                 </div>
-                            </td>
+                            </td> *@
                         </tr>
                     }
 
