--- a/IEEE_EMB/IEEE_EMB/Pages/SessionDetails.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/SessionDetails.cshtml
@@ -12,17 +12,41 @@
                         <i class="fas fa-calendar"></i>
                         <span>@Model.session.Rows[0][1]</span>
                     </div>
-                    @if (@Model.session.Rows[0]["Task"] != null)
+                    @if (Model.session != null && Model.session.Rows.Count > 0 && Model.session.Rows[0]["Task"] != null)
                     {
                         <div class="info-item">
                             <i class="fas fa-tasks"></i>
                             <a href="~/Task/@Model.session.Rows[0]["Task"]" class="doc-link">
-                            <span>Task File</span>
-                            <i class="fas fa-download"></i>
+                                <span>Task File</span>
+                                <i class="fas fa-download"></i>
                             </a>
                         </div>
                     }
-                   
+                    else
+                    {
+                        <div class="info-item">
+                            <i class="fas fa-info-circle"></i>
+                            <span>No assigned tasks yet.</span>
+                        </div>
+                    }
+                    @if (Model.session != null && Model.session.Rows.Count > 0 && Model.session.Rows[0]["TASK_ANSWER"] != null)
+                    {
+                    <div class="info-item">
+                        <i class="fas fa-file-alt"></i>
+                        <a href="~/TaskAnswer/@Model.session.Rows[0]["TASK_ANSWER"]" class="doc-link">
+                            <span>Task Answer</span>
+                            <i class="fas fa-download"></i>
+                        </a>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="info-item">
+                            <i class="fas fa-info-circle"></i>
+                            <span>No assigned answers yet.</span>
+                        </div>
+                    }
+
                     <div class="info-item">
                         <i class="fas fa-file-alt"></i>
                         <a href="~/Documents/@Model.session.Rows[0]["Document"]" class="doc-link">
