--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -25,10 +25,14 @@
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
-                    @if (HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Admin" || HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Mentor")
+                    @if (HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Admin")
                     {
                     @* <button class="btn btn-outline-primary ms-2">Manage Dashboard </button> *@
                         <a asp-page="/Admin/DashBoard" class="btn btn-outline-primary ms-2">Manage Dashboard</a>
+                    }
+                    @if (HttpContextAccessor.HttpContext?.Session.GetString("AuthenticationString") == "Mentor")
+                    {
+                        <a asp-page="/Admin/Activities" class="btn btn-outline-primary ms-2">Manage Dashboard</a>
                     }
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
