--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AddMentor.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AddMentor.cshtml
@@ -20,45 +20,61 @@
                 
                     <label for="SSN" class="control-label">SSN</label>
                     <input asp-for="@Model.mentor.SSN" type ="text" class="form-control" />
+                    <span className="text-red-500 text-sm mt-1" asp-validation-for="mentor.SSN"></span>
+
                 </div>
                 <!-- Name -->
                 <div class="form-group">
                     <label for="Name" class="control-label">Name</label>
                     <input type = "text" asp-for="@Model.mentor.Name" class="form-control" />
+                    <span className="text-red-500 text-sm mt-1" asp-validation-for="mentor.Name"></span>
+
                 </div>
 
                 <!-- Email -->
                 <div class="form-group">
                     <label for="Email" class="control-label">Email</label>
                     <input asp-for="@Model.mentor.Email" type="email" class="form-control" />
+                    <span className="text-red-500 text-sm mt-1" asp-validation-for="mentor.Email"></span>
+
                 </div>
                 <!-- Phone Number -->
                 <div class="form-group">
                     <label for="PhoneNumber" class="control-label">Phone Number</label>
                     <input asp-for="@Model.mentor.Phone" type="text" class="form-control" />
+                    <span className="text-red-500 text-sm mt-1" asp-validation-for="mentor.Phone"></span>
+
                 </div>
                 <!-- Password -->
                 <div class="form-group">
                     <label for="Password" class="control-label">Password</label>
                     <input asp-for="@Model.mentor.Password" type="password" class="form-control" />
+                    <span className="text-red-500 text-sm mt-1" asp-validation-for="mentor.Password"></span>
+
                 </div>
 
                 <!-- Education -->
                 <div class="form-group">
                     <label for="Education" class="control-label">Education</label>
                     <input asp-for="@Model.mentor.Education" class="form-control" />
+                    <span className="text-red-500 text-sm mt-1" asp-validation-for="mentor.Education"></span>
+
                 </div>
 
                 <!-- Bio -->
                 <div class="form-group">
                     <label for="Bio" class="control-label">Bio</label>
                     <textarea asp-for="@Model.mentor.BIO" class="form-control"></textarea>
+                    <span className="text-red-500 text-sm mt-1" asp-validation-for="mentor.BIO"></span>
+
                 </div>
 
                 <!-- CV -->
                 <div class="form-group">
                     <label for="CV" class="control-label">CV</label>
                     <input asp-for="@Model.mentor.CV" type="file" class="form-control" />
+                    <span className="text-red-500 text-sm mt-1" asp-validation-for="mentor.CV"></span>
+
                 </div>
 
               
